# saferide-id

./: .env.example  .gitmodules  Makefile  PROGRESS.md  README.md  STATUS.md  SafeRide - Africa Digital ID Hackathon Template 2026.pptx  TECHNICAL_NOTES.md  package-lock.json  package.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
app/admin/: layout.tsx  (+1 more)
backend/: .env.example  main.py  pyproject.toml  saferide.db
hooks/: use-driver-data.ts  use-operator-session.ts
lib/: mock-data.ts
saferide/: .env.example  Makefile  PROGRESS.md  README.md  metadata.json  package.json  tsconfig.tsbuildinfo
saferide/backend/: .env.example  .gitignore  pyproject.toml
saferide/backend/app/: __init__.py
saferide/backend/app/api/: __init__.py  auth.py  corporate_bodies.py  credentials.py  operators.py  public_flows.py  public_trust.py
saferide/backend/app/core/: config.py  logging_config.py  security.py
saferide/backend/app/db/: session.py  sqlite_schema.py
saferide/backend/app/db/models/: consent_request.py  emergency_share.py  operator.py  sim_sms.py  vehicle.py
saferide/backend/app/middleware/: request_logging.py
saferide/backend/app/schemas/: auth.py  credential.py  public_consent.py
saferide/backend/app/services/: credential_service.py  esignet_debug_store.py  esignet_service.py  governance_service.py  inji_certify_service.py  mock_identity_service.py  oauth_state_store.py  operator_service.py  pkce_service.py  public_trust_service.py  ussd_sim_service.py  verify_code_service.py
saferide/backend/scripts/: seed.py  setup_inji_config.py
(+131 files in other folders)
